add a orElseThrow